# FakeSniff

./: README.md  environment.yml  main.py  packages.txt  pyproject.toml  requirements.txt
stats/: state.csv  state.txt
utils/: clear_temp_folder.py  download_from_url.py  save_uploaded_image_temp.py  save_uploaded_video_temp.py
